--- a/3_data_ingestion/airflow/.env
+++ b/3_data_ingestion/airflow/.env
@@ -1,1 +1,9 @@
 AIRFLOW_UID=1000
+
+PG_HOST=pgdatabase
+PG_USER=root
+PG_PASSWORD=root
+PG_PORT=5432
+PG_DATABASE=ny_taxi
+
+BIGQUERY_DATASET=trips_data_all
