--- a/2_workflow_orchestration_airflow/airflow/docker-compose.yaml
+++ b/2_workflow_orchestration_airflow/airflow/docker-compose.yaml
@@ -114,6 +114,13 @@ services:
   airflow-webserver:
     <<: *airflow-common
     command: webserver
+    platform: linux/amd64
+    # The platform is set to linux/amd64 to ensure compatibility with the Airflow image
+    # This is necessary because the Airflow image is built for amd64 architecture
+    # and may not work correctly on other architectures like arm64.
+    # If you are using an arm64 architecture, you may need to build a custom image
+    # or use a different Airflow image that supports arm64.
+    # See: https://airflow.apache.org/docs/docker-stack/architecture.html#multi-architecture-support
     ports:
       - 8080:8080
     healthcheck:
@@ -136,6 +143,7 @@ services:
       timeout: 10s
       retries: 5
     restart: always
+    platform: linux/amd64
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -157,6 +165,7 @@ services:
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
       DUMB_INIT_SETSID: "0"
     restart: always
+    platform: linux/amd64
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -165,6 +174,7 @@ services:
   airflow-triggerer:
     <<: *airflow-common
     command: triggerer
+    platform: linux/amd64
     healthcheck:
       test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
       interval: 10s
@@ -179,6 +189,7 @@ services:
   airflow-init:
     <<: *airflow-common
     entrypoint: /bin/bash
+    platform: linux/amd64
     # yamllint disable rule:line-length
     command:
       - -c
@@ -269,6 +280,7 @@ services:
   flower:
     <<: *airflow-common
     command: celery flower
+    platform: linux/amd64
     ports:
       - 5555:5555
     healthcheck:
