--- a/2_workflow_orchestration_airflow/airflow/docker-compose.yaml
+++ b/2_workflow_orchestration_airflow/airflow/docker-compose.yaml
@@ -98,7 +98,8 @@ services:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 5s
       retries: 5
-    restart: always
+    # restart: always
+    restart: no
 
   redis:
     image: redis:latest
@@ -109,7 +110,8 @@ services:
       interval: 5s
       timeout: 30s
       retries: 50
-    restart: always
+    # restart: always
+    restart: no
 
   airflow-webserver:
     <<: *airflow-common
@@ -128,7 +130,8 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
-    restart: always
+    # restart: always
+    restart: no
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -142,7 +145,8 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
-    restart: always
+    # restart: always
+    restart: no
     platform: linux/amd64
     depends_on:
       <<: *airflow-common-depends-on
@@ -164,7 +168,8 @@ services:
       # Required to handle warm shutdown of the celery workers properly
       # See https://airflow.apache.org/docs/docker-stack/entrypoint.html#signal-propagation
       DUMB_INIT_SETSID: "0"
-    restart: always
+    # restart: always
+    restart: no
     platform: linux/amd64
     depends_on:
       <<: *airflow-common-depends-on
@@ -180,7 +185,8 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
-    restart: always
+    # restart: always
+    restart: no
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
@@ -288,7 +294,8 @@ services:
       interval: 10s
       timeout: 10s
       retries: 5
-    restart: always
+    # restart: always
+    restart: no
     depends_on:
       <<: *airflow-common-depends-on
       airflow-init:
